# Newsy

./: .gitignore  README.md  build_site.py  compare_models.py  deploy.py  main.py  pyproject.toml  requirements.txt  server.py
config/: .env.example  settings.yaml
docs/: index.html
docs/20260224_1859/: index.html
docs/20260224_1937/: index.html
docs/20260224_2050/: index.html
docs/20260224_2100/: index.html
docs/20260225_0723/: index.html
docs/20260225_1539/: index.html
docs/20260225_1649/: index.html
docs/20260225_1702/: index.html
docs/20260225_1757/: index.html
docs/20260225_2037/: index.html
docs/20260226_0600/: index.html
docs/20260226_2158/: index.html
docs/20260227_0600/: index.html
docs/20260228_0600/: index.html
docs/20260301_0600/: index.html
docs/20260302_0600/: index.html
docs/20260302_0956/: index.html
docs/20260303_0618/: index.html
src/: fetcher.py  pipeline.py  script.py  tts.py
tasks/: lessons.md
